# simuGBS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  covMatrix_generator.py  demo.py  plot2.py  plot3.py  plot4.py  plot5.py  plot6.py  plot7.py  plot8.py  plots.py  temp.py
include/: FT_probCalculator.h  probCalculator.h  stringUtils.h  vectorUtils.h
src/: CMakeLists.txt  DirectProb.cpp  DirectProb.h  FT_marginalProb.cpp  FT_marginalProb.h  FT_probCalculator.cpp  Node.h  ProbCalculator.h  covMatrix_reader.cpp  covMatrix_reader.h  marginalProb.cpp  marginalProb.h  probCalculator.cpp  simuGBS.cpp  simuGBS_Config.h  simuGBS_Config.h.in
src/utils/: stringUtils.cpp  vectorUtils.cpp
